--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>G'sタイピング</title>
+  <title>黒板</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div id="draggable-resizable">
     <div id="resize-handle" class="handle"></div>
-    ドラッグとリサイズが可能な要素
   </div>
   <script src="js/index.js"></script>
 </body>
